--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activities.AboutActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.Design.NoActionBar" />
     </application>
 
